Rewrite AppUrl class